'FINAL_COMMIT_TO_DELIVER'

--- a/hospital-dh-frontend/src/app/components/header/header.component.html
+++ b/hospital-dh-frontend/src/app/components/header/header.component.html
@@ -2,7 +2,16 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a href="#" class="navbar-brand">Hospital DH</a>
+
+            <a routerLink="/hospital" class="btn btn-default">Principal</a>
+            <a routerLink="/buscar/hospital" class="btn btn-default">Buscar Hospital</a>
+            <a routerLink="/buscar/paciente" class="btn btn-default">Buscar Paciente</a>
+            <a routerLink="/buscar/doctor" class="btn btn-default">Buscar Doctor</a>
         </div>
+    </div>
+
+    <div class="navbar-item">
+        <a routerLink="/login" class="navbar-brand">Salir</a>
     </div>
 
 </nav>
