--- a/hospital-dh-frontend/src/app/components/hospital/hospital.component.html
+++ b/hospital-dh-frontend/src/app/components/hospital/hospital.component.html
@@ -2,7 +2,7 @@
   <div class="card-body">
     <h5 class="card-title">Hospitales</h5>
     <div class="btn-group" role="group" aria-label="Basic example">
-      <button type="button" class="btn btn-primary"  (click)="nuevo()" >Nuevo</button>
+      <button type="button" class="btn btn-primary" *ngIf="btnDisabled"  (click)="nuevo()" >Nuevo </button>
     </div>
 
     <table class="table table-striped">
@@ -24,9 +24,9 @@
           <td>{{ hospital.direccion }}</td>
           <td>{{ hospital.fechaCreacion }}</td>
           <td>
-            <div class="btn-group" role="group" aria-label="Basic example">
+            <div class="btn-group" role="group" aria-label="Basic example" >
               <button title="Editar" class="btn btn-info btn-sm" (click)="edit(hospital)"><i class="fa fa-pen fa-lg"></i></button>
-              <a title="Cargar" [routerLink]="['/hospital', hospital.id]" class="btn btn-warning btn-sm" ><i class="fa fa-eye fa-lg"></i></a>
+              <a *ngIf="btnDisabled" title="Cargar" [routerLink]="['/hospital', hospital.id]" class="btn btn-warning btn-sm" ><i class="fa fa-eye fa-lg"></i></a>
               <button title="Eliminar" class="btn btn-danger btn-sm" (click)="delete(hospital)"><i class="fa fa-trash fa-lg"></i></button>
             </div>
             </td>
