--- a/hospital-dh-frontend/src/app/components/menu-opciones/menu-opciones.component.html
+++ b/hospital-dh-frontend/src/app/components/menu-opciones/menu-opciones.component.html
@@ -1,4 +1,3 @@
-<app-pacientes [hospital]="hospital"></app-pacientes>
-<app-doctores [hospital]="hospital"></app-doctores>
-<app-especialidad [hospital]="hospital"></app-especialidad>
-<app-notas></app-notas>
+<app-pacientes btnDisabled="false" [hospital]="hospital"></app-pacientes>
+<app-doctores btnDisabled="false" [hospital]="hospital"></app-doctores>
+<app-especialidad btnDisabled="false" [hospital]="hospital"></app-especialidad>
