--- a/hospital-dh-frontend/src/app/components/doctores/doctores.component.html
+++ b/hospital-dh-frontend/src/app/components/doctores/doctores.component.html
@@ -2,7 +2,7 @@
     <div class="card-body">
       <h5 class="card-title">Doctores </h5>
       <div class="btn-group" role="group" aria-label="Basic example">
-        <button type="button" class="btn btn-primary">Nuevo</button>
+        <button type="button" class="btn btn-primary" (click)="nuevo()">Nuevo</button>
       </div>
   
       <table class="table table-striped">
@@ -17,24 +17,23 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let paciente of data">
-            <th scope="row">{{ paciente.id }}</th>
-            <td>{{ paciente.nombre }}</td>
-            <td>{{ paciente.apellido }}</td>
-            <td>{{ paciente.fechaNacimiento }}</td>
-            <td>{{ paciente.fechaCreacion }}</td>
+          <tr *ngFor="let doctor of tableData">
+            <th scope="row">{{ doctor.id }}</th>
+            <td>{{ doctor.nombre }}</td>
+            <td>{{ doctor.apellido }}</td>
+            <td>{{ doctor.fechaNacimiento }}</td>
+            <td>{{ doctor.fechaCreacion }}</td>
             <td>
               <div class="btn-group" role="group" aria-label="Basic example">
-                <button title="Editar" class="btn btn-info btn-sm" (click)="edit(hospital)"><i class="fa fa-pen fa-lg"></i></button>
-                <a title="Cargar" [routerLink]="['/hospital', hospital.id]" class="btn btn-warning btn-sm" ><i class="fa fa-eye fa-lg"></i></a>
-                <button title="Eliminar" class="btn btn-danger btn-sm" (click)="delete(hospital)"><i class="fa fa-trash fa-lg"></i></button>
+                <button title="Editar" class="btn btn-info btn-sm" (click)="edit(doctor)"><i class="fa fa-pen fa-lg"></i></button>
+                <button title="Eliminar" class="btn btn-danger btn-sm" (click)="delete(doctor)"><i class="fa fa-trash fa-lg"></i></button>
               </div>
               </td>
           </tr>
         </tbody>
       </table>
   
-      <!-- <div class="d-flex justify-content-between p-2">
+       <div class="d-flex justify-content-between p-2">
         <ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize">
         </ngb-pagination>
   
@@ -43,7 +42,7 @@
           <option [ngValue]="4">4 items per page</option>
           <option [ngValue]="6">6 items per page</option>
         </select>
-      </div> -->
+      </div>
   
     </div>
   </div>
