--- a/hospital-dh-frontend/src/app/components/pacientes/pacientes.component.html
+++ b/hospital-dh-frontend/src/app/components/pacientes/pacientes.component.html
@@ -2,7 +2,7 @@
   <div class="card-body">
     <h5 class="card-title">Pacientes</h5>
     <div class="btn-group" role="group" aria-label="Basic example">
-      <button type="button" class="btn btn-primary"  (click)="nuevo()" >Nuevo</button>
+      <button *ngIf="btnDisabled" type="button" class="btn btn-primary"  (click)="nuevo()" >Nuevo</button>
     </div>
 
     <table class="table table-striped">
@@ -26,7 +26,7 @@
           <td>
             <div class="btn-group" role="group" aria-label="Basic example">
               <button title="Editar" class="btn btn-info btn-sm" (click)="edit(paciente)"><i class="fa fa-pen fa-lg"></i></button>
-              <a title="Cargar" [routerLink]="['/paciente', paciente.id]" class="btn btn-warning btn-sm" ><i class="fa fa-eye fa-lg"></i></a>
+              <a *ngIf="btnDisabled" title="Cargar" [routerLink]="['/paciente', paciente.id]" class="btn btn-warning btn-sm" ><i class="fa fa-eye fa-lg"></i></a>
               <button title="Eliminar" class="btn btn-danger btn-sm" (click)="delete(paciente)"><i class="fa fa-trash fa-lg"></i></button>
             </div>
             </td>
