--- a/hospital-dh-frontend/src/app/components/principal/principal.component.html
+++ b/hospital-dh-frontend/src/app/components/principal/principal.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
   <div class="row">
     <div class="col-6"> 
-      <app-hospital></app-hospital>
+      <app-hospital btnDisabled="false" loadMain="true"></app-hospital>
     </div>
     
     <div class="col-6">
@@ -9,14 +9,9 @@
         <div class="card-body">
           <div class="col">
             <router-outlet></router-outlet>
-            
           </div>
-          
         </div>
       </div>
     </div>
-
-   
-
   </div>
   
